--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,9 @@ a.btn:hover {
 .tabs .tab a:focus, .tabs .tab a:focus.active {
     color: #f2071b; 
 }
+.tabs .tab {
+    text-transform: none;
+}
 
 .tabs .indicator {
     background-color: #8f1021;
@@ -90,4 +93,34 @@ h2 {
 }
 .cancel:hover {
     background: #c62828!important;
+}
+.pdo {
+    width: 20%!important;
+}
+.pic {
+    max-width: 100%;
+    max-height: 200px;
+}
+/**
+*dimension card
+*/
+.card-image {
+    height: 200px;
+}
+.cardClient {
+    height: 90px!important;
+}
+.card-action {
+    height: 50px;
+}
+.pic2 {
+    width: 100%;
+    height: auto;
+}
+.radio {
+    margin-left: 0!important;
+}
+.info {
+    font-size: 0.8em;
+    font-style: italic;
 }
